Fixing center alignment and text overflow for main content view and tasks

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,7 +23,7 @@ svg {
 
 body {
   display: grid;
-  grid-template-columns: 0.9fr 4fr;
+  grid-template-columns: 270px 4fr;
   grid-template-rows: 0.1fr 0.3fr 1fr;
   overflow: hidden;
 
@@ -99,12 +99,19 @@ header {
 .main-content {
   grid-column: 2;
   grid-row: 2 / 4;
+  display: flex;
+  justify-content: center;
+  padding-top: 3rem;
 }
 
 .view {
-  width: auto;
+  width: 100%;
   height: 100%;
-  padding: 3rem 10rem;
+  /* .main-content centers, so to prevent view from shrinking before space around
+  collapses, set width 100% and make a max width. This protects the content until
+  all the surrounding space is 0 */
+  max-width: 900px;
+  padding: 3rem;
 }
 
 .view-header {
@@ -144,13 +151,15 @@ header {
 }
 
 .tasks-container {
+  width: 100%;
+  max-width: 900px;
   padding-top: 2rem;
 }
 
 .task-item {
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 100%;
   padding: 0.5rem;
   border-bottom: 1px solid var(--light-grey);
   cursor: pointer;
@@ -162,8 +171,10 @@ header {
 }
 
 .task-checkbox {
-  width: 1.1rem;
-  height: 1.1rem;
+  align-self: flex-start;
+  width: 1rem;
+  height: 1rem;
+  margin-top: 0.25rem;
   background-color: transparent;
   border: 2px solid white;
   border-radius: 50%;
@@ -173,13 +184,20 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 0.5rem;
   width: 100%;
 }
 
-.task-text {
-  display: flex;
-  flex-direction: column;
+.task-text > * {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   padding-left: 1rem;
+}
+
+.task-title {
+  -webkit-line-clamp: 1;
 }
 
 .task-description {
@@ -189,6 +207,7 @@ header {
 
 .task-details {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
